# lambdachain

./: .gitignore  default.nix
common/: common.cabal
common/src/Blockchain/Data/: Address.hs  AddressState.hs  ExtendedWord.hs  Keccak256.hs  Keys.hs  RLP.hs  Signed.hs  Subject.hs  SubjectAndCert.hs  Transaction.hs  TransactionResult.hs  Util.hs
common/src/Common/: DeriveToJSVal.hs  Route.hs  Utils.hs  Windowed.hs
common/src/Common/Api/: Namespace.hs
common/src/Crypto/Hash/: Keccak.hs
dep/echarts-jsdom/: default.nix  git.json  update.sh
dep/html-parse/: default.nix  git.json  update.sh
dep/reflex-dom-echarts/: default.nix  git.json  update.sh
dep/reflex-dom-storage/: git.json  update.sh
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Account.hs  Client.hs  DeriveToJSVal.hs  Head.hs  HomePage.hs  ItemDetail.hs  ItemList.hs  Login.hs  Nav.hs  Shop.hs  Strats.hs  Tokens.hs  Transactions.hs  Utils.hs
frontend/src/Mercata/Data/: Item.hs  Trade.hs
frontend/src/Obelisk/Frontend/: Storage.hs
static/: bn.js  main.css  manifest.json  secp256k1.js
test-app/: backend  frontend.jsexe.assets  static.assets  version
