name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , base16-bytestring
               , bytestring
               , containers
               , cryptonite
               , data-default
               , data-fix
               , dependent-map
               , dependent-sum
               , dependent-sum-template
               , ghcjs-base
               , ghcjs-dom
               , jsaddle
               , lens
               , memory
               , monad-control
               , mtl
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-route
               , primitive
               , ref-tf
               , reflex
               , reflex-dom
               , reflex-dom-core
               , scientific
               , servant
--               , servant-reflex
               , text
               , transformers
               , unordered-containers
               , vector
               , obelisk-route
               , text
  exposed-modules:
    Blockchain.Data.Address
    Blockchain.Data.AddressState
    Blockchain.Data.ExtendedWord
    Blockchain.Data.Keccak256
    Blockchain.Data.Keys
    Blockchain.Data.RLP
    Blockchain.Data.Signed
    Blockchain.Data.Subject
    Blockchain.Data.SubjectAndCert
    Blockchain.Data.Transaction
    Blockchain.Data.TransactionResult
    Blockchain.Data.Util
    Common.Api.Errors
    Common.Api.Namespace
    Common.Api.Validation
    Common.Api
    Common.DeriveToJSVal
    Common.Route
    Common.Utils
    Common.Windowed
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
