name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , aeson
               , base16-bytestring
               , bytestring
               , common
               , containers
               , cryptonite
               , data-default
               , data-fix
               , dependent-map
               , dependent-sum
               , dependent-sum-template
               , echarts-jsdom
               , ghcjs-dom
               , http-types
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , jsaddle-dom
               , lens
               , memory
               , monad-control
               , mtl
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , obelisk-route
               , primitive
               , reflex
               , reflex-dom
               , reflex-dom-echarts
               , reflex-dom-storage
               , ref-tf
               , scientific
               , servant
--               , servant-reflex
               , text
               , transformers
               , unordered-containers
               , vector
  exposed-modules:
    Frontend
    Frontend.Account
    Frontend.Client
    Frontend.Head
    Frontend.HomePage
    Frontend.ItemDetail
    Frontend.ItemList
    Frontend.Login
    Frontend.Nav
    Frontend.Shop
    Frontend.Tokens
    Frontend.Transactions
    Frontend.Utils
    Mercata.Data.Item
    Mercata.Data.Trade
    Obelisk.Frontend.Storage
  ghc-options: -Wall -O -fno-show-valid-hole-fits
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , frontend
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
  ghc-options: -Wall -O -fno-show-valid-hole-fits -threaded
               -- unsafe code
               -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields
               -- unneeded code
               -Widentities -Wredundant-constraints
  if impl(ghc >= 8.8)
    ghc-options:
               -Wmissing-deriving-strategies
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
